[gd_scene load_steps=16 format=3 uid="uid://bsb038uvp00an"]

[ext_resource type="Shader" path="res://Player/hit_blink.gdshader" id="1_4xum6"]
[ext_resource type="Script" path="res://rat_elite.gd" id="1_cw1h2"]
[ext_resource type="Texture2D" uid="uid://bfwx56ndfk8jm" path="res://Mapas/Ratfolk Axe Sprite Sheet.png" id="2_8mffu"]
[ext_resource type="Texture2D" uid="uid://btbl6q0wx31m3" path="res://CharactersDialogue/IconsFlat-16.png" id="3_8811c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fc5wh"]
shader = ExtResource("1_4xum6")
shader_parameter/blink_intensity = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s8c7u"]
radius = 5.0
height = 18.0

[sub_resource type="Animation" id="Animation_07bym"]
resource_name = "detect"
length = 0.233337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ratFolk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.166667, 0.233337),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("new:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("new:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.133333, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -12), Vector2(-5.96046e-08, -15)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ratFolk:material:shader_parameter/blink_intensity")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ugolf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ratFolk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("new:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("new:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -12)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ratFolk:material:shader_parameter/blink_intensity")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("areaDeDano:monitorable")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("areaDeDano:monitoring")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("areaDeDano/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_83ngp"]
resource_name = "walk"
length = 0.300003
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ratFolk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ratFolk:material:shader_parameter/blink_intensity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_niljo"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ratFolk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.2, 0.266667, 0.333333, 0.4, 0.3, 0.6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("areaDeDano:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("areaDeDano:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("areaDeDano/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.166667, 0.2, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ratFolk:material:shader_parameter/blink_intensity")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_204f7"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ratFolk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [37, 38, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ratFolk:material:shader_parameter/blink_intensity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.2, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v14rd"]
_data = {
"RESET": SubResource("Animation_ugolf"),
"attack": SubResource("Animation_niljo"),
"detect": SubResource("Animation_07bym"),
"hurt": SubResource("Animation_204f7"),
"walk_right": SubResource("Animation_83ngp")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8mewf"]
radius = 4.0
height = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wtwve"]
radius = 27.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xfu5u"]
radius = 19.0

[node name="ratElite" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_cw1h2")

[node name="ratFolk" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_fc5wh")
position = Vector2(1, -8)
texture = ExtResource("2_8mffu")
hframes = 12
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_s8c7u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v14rd")
}
speed_scale = 0.5

[node name="new" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -12)
scale = Vector2(0.474074, 0.555072)
texture = ExtResource("3_8811c")
region_enabled = true
region_rect = Rect2(50.6852, 80.2679, 10.628, 15.3698)

[node name="areaDeDano" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaDeDano"]
position = Vector2(14, -2)
shape = SubResource("CapsuleShape2D_8mewf")
disabled = true

[node name="area_detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_detection"]
shape = SubResource("CircleShape2D_wtwve")

[node name="areaPraAtaca" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaPraAtaca"]
shape = SubResource("CircleShape2D_xfu5u")
debug_color = Color(0.989781, 0, 0.286363, 0.42)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="areaDeDano" to="." method="_on_area_de_dano_body_entered"]
[connection signal="body_exited" from="areaDeDano" to="." method="_on_area_de_dano_body_exited"]
[connection signal="body_entered" from="area_detection" to="." method="_on_area_detection_body_entered"]
[connection signal="body_exited" from="area_detection" to="." method="_on_area_detection_body_exited"]
[connection signal="body_entered" from="areaPraAtaca" to="." method="_on_area_pra_ataca_body_entered"]
[connection signal="body_exited" from="areaPraAtaca" to="." method="_on_area_pra_ataca_body_exited"]
